[tool.poetry]
name = "config-module"
version = "0.1.0"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
grpcio = "1.64.1"
grpcio-tools = "1.64.1"
protobuf = "5.27.1"
pymongo = "4.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
