[tool.poetry]
name = "redis-module"
version = "0.1.1"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.1.0"
data_model_module = { git = "https://github.com/parkyoungjin-888/common.git", subdirectory = "data_model_module" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
